# in-plain-sight

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Makefile  README.md  gallery.db  pyproject.toml  test_gallery.db
backend/app/: ai_service.py  database.py  main.py  models.py  repository.py  schema.py  seed.py
backend/tests/: test_ai_integration.py  test_ai_service.py  test_health.py  test_schema.py
docs/: DECISIONS.md  development_plan.md  project_context.md  project_process.md
docs/decision_log/: 0001_project_intent.md  0002_backend_infra.md  0003_domain_model.md  0004_database_persistence.md  0005_simplified_relationships.md  0006_session_management.md  0007_test_database_isolation.md  0008_ai_integration_ephemeral_mvp.md  0009_google_gemini_api_selection.md  0010_multimodal_image_input.md  0011_frontend_stack.md  0012_deployment_architecture.md  0013_frontend_implementation.md  0014_depth_camera_navigation.md  0015_cloudinary_integration.md  0016_navigation_architecture.md  0017_image_loading_optimization.md  0018_production_database_neon_postgres.md
frontend/: .env.example  .gitignore  README.md  codegen.ts  index.html  package-lock.json  package.json
frontend/public/: artist.avif
frontend/src/: App.tsx
frontend/src/components/Gallery/: Artwork.module.scss  Artwork.tsx  index.ts  (+6 more)
frontend/src/lib/: graphqlClient.ts  queryClient.ts
frontend/src/pages/: Bio.module.scss  Bio.tsx  Gallery.module.scss  Gallery.tsx
frontend/src/queries/: artist.graphql  artworkInterpretation.graphql  collections.graphql
frontend/src/styles/: global.scss
(+9 files in other folders)
